package pe.ayni.identity;

/** Whether a credit policy applies to every student or to a targeted group. */
public enum PolicyKind {
  BASELINE,
  TARGETED
}
