package pe.ayni.identity;

/** The two kinds of user inside a university. The platform administrator is not one of them. */
public enum UserRole {
  STUDENT,
  COORDINATOR
}
