package pe.ayni.identity.domain.model;

public enum AccessPurpose {
    ACTIVATION,
    LOGIN,
    COORDINATOR_INVITE
}