package pe.ayni.identity.domain.model;

public enum UserStatus {
    PENDING,
    ACTIVE,
    RESTRICTED
}